--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <p>Once upon a time there was a<p>
         <p>dog that lived under a rock</p>
+        <p>One day the dog went for a walk</p>
     <body>
 <html>
