Capitalized second line, added fourth line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <body>
         <p>Once upon a time there was a<p>
-        <p>dog that lived under a rock</p>
+        <p>Dog that lived under a rock</p>
         <p>One day the dog went for a walk</p>
+        <p>And found himself at the end of a dock</p>
     <body>
 <html>
