--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <p>Dog that lived under a rock</p>
         <p>One day the dog went for a walk</p>
         <p>And found himself at the end of a dock</p>
+        <p>He jumped in the lake and drowned</p>
     <body>
 <html>
