--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+    </head>
     <body>
         <p>Once upon a time there was a<p>
         <p>Dog that lived under a rock</p>
